# xChess

./: CMakeLists.txt  LICENSE  README.md
dashboard/: textual_dashboard.py
docs/: architecture.md
notebooks/: Training_and_Benchmarks.ipynb
src/: chess_board.cpp  chess_board.h  engine.cpp  engine.h  evaluator.cpp  evaluator.h  gpu_nn.cuh  main.cpp  transposition.h
tests/: test_perft.cpp
train/: train.py
